<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:id="@+id/username"
        android:hint="@string/username_literal"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        android:hint="@string/password_literal"
        android:id="@+id/password"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_margin="20dp"
        android:id="@+id/login_btn"
        android:text="@string/login_literal"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintLeft_toLeftOf="@id/login_btn"
        app:layout_constraintRight_toRightOf="@id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_primary"
        android:id="@+id/register_link"
        android:text="@string/register_consent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>